# practice202603

./: .gitignore  AGENTS.md  README.md  generate-api-spec.sh  pyproject.toml
.devcontainer/: .gitignore  Dockerfile  compose.yaml  compose.yml  devcontainer.json  nginx.conf  postCreate.sh
.github/: dependabot.yml
backend/: app.py  models.py  pyproject.toml  settings.py
backend/lib/: session.py  user.py  utils.py
backend/tests/: test_app.py  test_user.py
backend/tests/lib/: test_user.py
backend/tests/views/: test_articles.py  test_auth.py
backend/views/: articles.py  auth.py
database/: database.py  seed.py  tables.py  utils.py
database/migrations/: env.py
database/migrations/versions/: 20260429_063049_create_initial_tables.py  20260430_111922_create_initial_tables.py  ruff.toml
frontend/: .gitignore  .oxlintrc.json  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  atoms.ts  main.tsx  style.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/layouts/: DefaultLayout.module.css  DefaultLayout.tsx
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/pages/: ArticleDetailPage.tsx  ArticleEditPage.tsx  ArticleNewPage.tsx  IndexPage.tsx  NotFoundPage.tsx  SigninPage.tsx  SignupPage.tsx
