[project]
name = "backend"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.14,<2.1.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.24",
    "ipython>=9.11.0",
    "pytest>=9.0.2",
]

[tool.uv]
exclude-newer = "1 week"
no-build = true

[tool.ruff]
line-length = 120
target-version = "py314"
src = [".", "../database"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
